--- a/src/style.css
+++ b/src/style.css
@@ -14,18 +14,25 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#typing-examples {
+  max-width: 968px;
+}
+
 .example-block {
   padding: 1rem 2rem;
+}
+
+.typing-container {
+  min-height: 60px;
+  background-color: rgba(64, 64, 64, 0.5);
 }
 
 .cursor {
   background-color: #00ffff;
   display: inline-block;
   width: 10px;
-
   height: 1.4em;
   vertical-align: middle;
-
   height: 1em;
 }
 
@@ -43,4 +50,68 @@
   100% {
     background-color: #22c55e;
   }
+}
+
+.cursor-overflow-container {
+  border: solid #f43f5e;
+  border-width: 0px 0px 0 6px;
+  margin: 20px 0px;
+  padding-left: 15px;
+}
+
+.cursor-overflow {
+  width: 842px;
+  font-family: arial;
+  resize: horizontal;
+  overflow: hidden;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  position: relative;
+}
+
+.cursor-overflow::after {
+  content: "Resize here \2192";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: #f43f5e;
+  font-size: 12px;
+  line-height: 1;
+  padding-right: 12px;
+}
+
+.cursor-overflow .typing-container.fixed .cursor {
+  margin-left: -10px;
+  translate: 100% 0;
+}
+
+pre {
+  background: #7dd3fc33;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+#name-input-ex .typing-container {
+  min-height: auto;
+}
+
+#name-input-ex label {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  gap: 6px;
+}
+
+#name-input-ex input {
+  padding: 6px 12px;
+  font-size: 1em;
+}
+
+#name-input-ex input::placeholder {
+  opacity: 0.5;
+  color: currentColor;
+}
+
+#name-input-ex input:focus::placeholder {
+  opacity: 0;
 }
